--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "vendor": "vtex",
+  "vendor": "capacitacionio",
   "name": "store-theme",
-  "version": "4.4.2",
+  "version": "0.0.1",
   "builders": {
     "styles": "2.x",
     "store": "0.x",
@@ -62,7 +62,11 @@
     "vtex.product-specifications": "1.x",
     "vtex.tab-layout": "0.x",
     "vtex.condition-layout": "2.x",
-    "vtex.css-handles": "1.x"
+    "vtex.css-handles": "1.x",
+    "vtex.product-availability": "0.x",
+    "vtex.store-newsletter": "1.x",
+    "vtex.category-menu": "2.x",
+    "vtex.product-comparison": "0.x"
   },
   "peerDependencies": {
     "vtex.reviews-and-ratings": "2.x"
