--- a/store/blocks/product-summary/product-summary.jsonc
+++ b/store/blocks/product-summary/product-summary.jsonc
@@ -1,5 +1,5 @@
 {
-  "product-summary.shelf": {
+  "product-summary.shelf.product-comparison": {
     "children": [
       "stack-layout#prodsum",
       "product-summary-name",
